# ghost.dev

./: .env.example  .gitignore  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: fastapi-report.html
ghost/: __init__.py  cli.py  config.py
ghost/core/: _ai.py  _utils.py  executor.py  observer.py  planner.py  recoverer.py  scanner.py
ghost/docker/: Dockerfile.ghost  __init__.py  container.py
ghost/fixgen/: __init__.py  suggestions.py
ghost/models/: __init__.py  friction.py  report.py  step.py
ghost/reporter/: html.py  terminal.py
ghost/reporter/templates/: report.html
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_executor.py  test_fixgen.py  test_html_report.py  test_models.py  test_observer.py  test_planner.py  test_recoverer.py  test_scanner.py  test_terminal_reporter.py  test_utils.py
