[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-dev"
version = "0.1.0"
description = "The Phantom Developer — AI agent that tests your repo's onboarding docs"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["developer-experience", "onboarding", "documentation", "dx", "ai-agent", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/SujalXplores/ghost.dev"
Repository = "https://github.com/SujalXplores/ghost.dev"
Issues = "https://github.com/SujalXplores/ghost.dev/issues"

dependencies = [
    "click>=8.3",
    "rich>=14.0",
    "docker>=7.1",
    "anthropic>=0.86",
    "openai>=2.30",
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "pydantic>=2.12",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
ghost = "ghost.cli:main"

[tool.setuptools.packages.find]
include = ["ghost*"]

[tool.setuptools.package-data]
ghost = [
    "reporter/templates/*.html",
    "docker/Dockerfile.ghost",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
